--- a/arwis/src/components/UI/BarContainer/BarContainer.module.css
+++ b/arwis/src/components/UI/BarContainer/BarContainer.module.css
@@ -5,6 +5,4 @@
     justify-content: space-evenly;
     background-color: hsla(232, 10%, 13%, 0.50);
     min-height: 100px;
-    padding-right: 2.5%;
-    padding-left: 2.5%;
 }
