--- a/arwis/src/components/UI/Graph/Graph.module.css
+++ b/arwis/src/components/UI/Graph/Graph.module.css
@@ -1,7 +1,7 @@
 
 
 .graph {
-    width: 45%;   
+    width: 48%;   
     display: flex;
     flex-direction: column;
     align-items: center;
